--- a/package.json
+++ b/package.json
@@ -10,17 +10,10 @@
   },
   "author": "Shivang Srivastava",
   "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4"
-  },
+  
   "dependencies": {
-    "@mdi/font": "^7.1.96",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "nodemon": "^2.0.21",
-    "postcss-cli": "^10.1.0"
+    "nodemon": "^2.0.21"
   }
 }
